--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     </section>
     <section class="bg-gray-100 grid md:col-span-6  p-2 col-span-12  min-h-[40vh] rounded-3xl ">
 <div class="flex flex-col">
-        <form id="todo-form" class="flex flex-col items-center justify-center  gap-4">
+        <form id="todo-form" class="flex flex-col items-center justify-center  gap-4 p-4">
 
             <p class="text-2xl">Mes Tâches</p>
             <div class="flex gap-2 ">
-            <input type="text" placeholder="Ajouter une tâche..." id="input-tache" class="h-8 rounded-lg flex-1">
-            <button id="btn-valide" class="bg-green-500 h-8 rounded-lg text-white font-extrabold text-3xl flex  "><p class="flex items-center justify-center pb-2 ">+</p></button>
+            <input type="text" placeholder="Ajouter une tâche..." id="input-tache" class="h-8 p-2 rounded-lg flex-1">
+            <button id="btn-valide" class="bg-green-500 h-8 p-2  rounded-lg text-white font-extrabold text-3xl flex  "><p class="flex items-center justify-center pb-2 ">+</p></button>
         </div>
          </form>
           <ul id="todo-list" class="overflow-y-auto"></ul>
@@ -40,7 +40,7 @@
     </section >
 </main>
   
-    </div>
+  
 
     <script type="module" src="app.js"></script>
 </body>
